administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -2087,6 +2087,13 @@ a.ui-view,.template-content a{
     }
 }
 
+.ui-view.grid-items {
+    [data-view="graphDetailAnalytic"] {
+        width: calc( 33% - 20px );
+        display: inline-block;
+        margin: 10px;
+    }
+}
 
 
 
