--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -779,6 +779,22 @@ button.inline-edit {
         background-color:$buttonColor;
         color:white;
     }
+    
+    
+}
+
+
+.page-content .intro-section{
+    a.map-link {
+        background-color: white;
+        padding: 30px;
+        text-align: center;
+        font-weight: 100;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgb(0 0 0 / 5%);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        display: block;
+    }
 }
 
 
