--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -810,6 +810,20 @@ button.inline-edit {
             vertical-align: middle;
         }
         
+        &:after {
+            content: "";
+            background-image: url(https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/hxk_%5BG%5D_pmm_QkQ_%5BImAgE%5D.png);
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            background-repeat: no-repeat;
+            opacity: 0.1;
+            background-position: right 24px;
+            background-size: auto 84px;
+            pointer-events: none;
+        }
+        
         &>h1 {
             display: inline-block;
             vertical-align: middle;
