--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -812,14 +812,14 @@ button.inline-edit {
         
         &:after {
             content: "";
-            background-image: url(https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/hxk_%5BG%5D_pmm_QkQ_%5BImAgE%5D.png);
+            background-image: url(https://nickolanackbucket.s3.us-west-2.amazonaws.com/sixties-scoop.geoforms.ca/1/Uploads/SbN_NO8_%5BImAgE%5D_%5BG%5D_0UH.png);
             width: 100%;
             height: 100%;
             position: absolute;
             left: 0;
             background-repeat: no-repeat;
             opacity: 0.1;
-            background-position: right 24px;
+            background-position: right 10px;
             background-size: auto 84px;
             pointer-events: none;
         }
