administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -830,6 +830,15 @@ button.inline-edit {
             font-weight: 100;
             color: #333333;
         }
+        
+        &hover:{
+            
+            &:before {
+                filter: grayscale(0);
+            }
+            
+        }    
+    
     }
 }
 
