administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -831,7 +831,7 @@ button.inline-edit {
             color: #333333;
         }
         
-        &hover:{
+        &:hover{
             
             &:before {
                 filter: grayscale(0);
