--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -794,6 +794,8 @@ button.inline-edit {
         box-shadow: 0 0 10px rgb(0 0 0 / 5%);
         border: 1px solid rgba(0, 0, 0, 0.1);
         display: block;
+        
+        transition:box-shadow 0.2s, background-color 0.8s;
     
     
         &:before {
@@ -832,6 +834,12 @@ button.inline-edit {
         }
         
         &:hover{
+            
+            
+            box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+            background-color: #f4f4f4;
+            transition:box-shadow 0.2s, background-color 0.2s;
+        
             
             &:before {
                 filter: grayscale(0);
