--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -687,6 +687,10 @@ $introTextColor:#4d8673;
         
     }
     
+    
+    
+    
+    
     button.form-btn.secondary-btn {
         padding: 4px 15px;
         font-size: 17px;
@@ -717,6 +721,23 @@ $introTextColor:#4d8673;
         clear: both;
     }
     
+    
+}
+
+[data-view="visualizationsContent"]{
+    
+    .keen-dataviz .keen-dataviz-title {
+        font-weight: 100;
+        color: #333333;
+        font-family: sans-serif;
+        font-size: 24.5px;
+        text-align: center;
+        margin-top: 50px;
+    }
+    
+    g.c3-axis.c3-axis-y {
+        display: none;
+    }
     
 }
 
