administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -2204,9 +2204,10 @@ a.ui-view,.template-content a{
 
 .ui-view.grid-items {
     [data-view="graphDetailAnalytic"] {
-        width: calc( 25% - 20px );
+        width: calc(( 100% / 7 ) - 20px);
         display: inline-block;
         margin: 10px;
+        min-width: 120px;
     }
 }
 
