administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -904,11 +904,6 @@ button.inline-edit {
 }
 
 
-.page-content .grid-items {
-    .ui-list-view{
-        text-align:left;
-    }
-}
 
 .page-content .ui-view.featured-stories .ui-view.featured-story, .intro-section .ui-view.featured-item {
     
@@ -2202,13 +2197,31 @@ a.ui-view,.template-content a{
     }
 }
 
-.ui-view.grid-items {
+.page-content .ui-view.grid-items {
     [data-view="graphDetailAnalytic"] {
         width: calc(( 100% / 7 ) - 20px);
         display: inline-block;
         margin: 10px;
         min-width: 120px;
     }
+    
+    .keen-dataviz .keen-dataviz-metric-value {
+        font-size: 55px;
+        top: 5px;
+        position: relative;
+    }
+    
+    .keen-dataviz .keen-dataviz-metric-title {
+        position: relative;
+        top: -5px;
+        font-size: 20px;
+    }
+    
+    .ui-list-view{
+        text-align:left;
+    }
+
+
 }
 
 
