--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -21,7 +21,7 @@ $introTextColor:#4d8673;
 
 
 
-.header-menu {
+.ui-list-view.header-menu {
     position: absolute;
     top: 10px;
     right: 100px;    
@@ -43,7 +43,7 @@ $introTextColor:#4d8673;
         cursor: pointer;
         transition: background-color .8s;
     }
-    
+    .
     .ui-view.menu-item-link {
         p {
             display: inherit;
