--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -21,7 +21,7 @@ $introTextColor:#4d8673;
 
 
 
-.header-menu {
+[data-view="headerMenuContent"] .header-menu {
     position: absolute;
     top: 10px;
     right: 100px;    
