administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -47,6 +47,7 @@ $introTextColor:#4d8673;
     .ui-view.menu-item-link {
         p {
             display: inherit;
+            margin:0;
         }
         
         &:hover {
