--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -237,12 +237,24 @@ $introTextColor:#4d8673;
     .site-heading {
         left:200px;
         top:-10px;
+        width: calc( 100% - 250px );
     }
 
     .ui-view.page-header{
         height:170px;
     }
 
+}
+
+@media only screen and (max-width: 650px){
+
+    .site-heading {
+        width: calc( 100% - 300px );
+        h2 {
+            display:none;
+        }
+        
+    }
 }
 
 
