--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -249,7 +249,11 @@ $introTextColor:#4d8673;
 @media only screen and (max-width: 650px){
 
     .site-heading {
+        
         width: calc( 100% - 300px );
+        left: 170px;
+        top: -5px;
+        
         h1 {
             font-size: 30px
         }
@@ -258,6 +262,21 @@ $introTextColor:#4d8673;
             display:none;
         }
         
+    }
+    
+    .ui-view.page-header:after {
+        width: 80px;
+        height: 80px;
+    }
+    .ui-view.page-header {
+        height: 130px;
+    }
+}
+
+@media only screen and (max-width: 450px){
+    .site-heading {
+        width: 200px
+        top:-20px;
     }
 }
 
