--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -275,7 +275,7 @@ $introTextColor:#4d8673;
 
 @media only screen and (max-width: 450px){
     .site-heading {
-        width: 200px
+        width: 200px;
         top:-20px;
     }
 }
