--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1128,13 +1128,7 @@ button.inline-edit {
             transform: scale(.3);
         }
         
-         .video {
-            display: inline-block;
-            width: 100%;
-            height: 120px;
-            background-size: cover;
-            background-position: center;
-        }
+   
         
         
         .video h2 {
@@ -1150,12 +1144,16 @@ button.inline-edit {
             font-weight: bold;
         }
         
-        .image {
+     
+        
+        .image, .video{
             width: 100%;
             height: 120px;
             display: inline-block;
             background-size: cover;
             background-position: center;
+            box-shadow: 0 0 3px rgb(0 0 0 / 40%);
+            border: 1px solid #3f3f3f;
         }
         
         &.has-img.has-video .image {
