administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -563,7 +563,7 @@ $introTextColor:#4d8673;
     }
     
     .ui-list-view.banner-btns {
-        text-align:right;
+        /* text-align: right; */
     }
 
 
