administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1363,7 +1363,7 @@ button.inline-edit {
 
 
 
-.target-story, .target-storyIndex, .target-search{
+.target-story, .target-storyIndex, .target-search, .target-mainMap{
     
     
         
