administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1433,7 +1433,7 @@ button.inline-edit {
     }
 
 
-    .small-video{
+    .small-video, .icon-only{
         
         .media-container.has-video > .video {
             width: 150px;
@@ -1819,7 +1819,7 @@ button.inline-edit {
         }
     }
 
-    .small-video{
+    .small-video, .icon-only{
         
         .media-container.has-video > .video {
             width: 150px;
