administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1529,7 +1529,7 @@ button.inline-edit {
         
         
         
-        .map-view-link, .small-video {
+        .map-view-link, .small-video, .icon-only {
             width: calc( 100% - 44px);
             line-height: 83px;
             height: 100px;
