administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1599,6 +1599,11 @@ button.inline-edit {
             
         }
         
+        .small-video.icon-only {
+            &:before {
+                content:none;
+            }
+        }
         
         .small-video {
             position: unset;  
