administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1599,7 +1599,7 @@ button.inline-edit {
             
         }
         
-        .small-video.icon-only {
+        .icon-only {
             &:before {
                 content:none;
             }
