administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1600,6 +1600,7 @@ button.inline-edit {
         }
         
         .icon-only {
+            position: unset;
             &:before {
                 content:none;
             }
